--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -40,6 +40,9 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: latest
       - name: CMake configuration
         run: cmake -S . -B build -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
       - name: Building
